--- a/sass/_multimedia-modules.scss
+++ b/sass/_multimedia-modules.scss
@@ -21,12 +21,13 @@
   }
 }
 
-// MULTIMEDIA A -
+// MULTIMEDIA A - Nils Petter
 .multimedia-a {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30rem, 50rem));
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 60rem));
   grid-gap: 10rem;
   justify-content: center;
+  padding: 15rem 0rem;
 
   &_media {
     display: grid;
@@ -34,33 +35,36 @@
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: auto;
 
+    & img {
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    }
+
     &_img--1 {
-      grid-row: 2 / 5;
+      grid-row: 1 / 5;
       grid-column: 1 / 4;
-      width: 160%;
+      width: 150%;
       //box-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
     }
 
     &_img--2 {
-      grid-row: 6 / 6;
+      grid-row: 6;
       grid-column: 4 / 7;
       z-index: 20;
       //box-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
 
-      @media only screen and (max-width: $bp-largest) {
+      @media only screen and (max-width: $bp-small) {
         grid-row: 4;
         grid-column: 4 / 7;
       }
     }
 
-    @media only screen and (max-width: $bp-largest) {
+    @media only screen and (max-width: $bp-small) {
       grid-template-rows: repeat(5, minmax(10rem, 10rem));
       margin: 0rem 2rem;
     }
   }
 
   &_text {
-    padding: 20rem 0rem;
     display: grid;
     align-self: start;
     justify-self: left;
@@ -169,7 +173,7 @@
   }
 }
 
-// MULTIMEDIA D
+// MULTIMEDIA D - Kjersti Aarum
 .multimedia-d {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(60rem, 1fr));
@@ -212,7 +216,6 @@
     }
 
     & img {
-      //box-shadow: 1px 1px 20px 1px #252525d5;
     }
 
     @media only screen and (max-width: $bp-small) {
@@ -220,6 +223,7 @@
 
       grid-template-rows: repeat(6, 10vh);
       grid-template-columns: repeat(6, 1fr);
+
     }
   }
 
@@ -250,10 +254,12 @@
   @media only screen and (max-width: $bp-small) {
     grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
     grid-gap: 1rem;
+
+    background-position-x: 25%;
   }
 }
 
-// MULTIMEDIA E
+// MULTIMEDIA E - FOTOKONKURRANSE
 .multimedia-e {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
@@ -292,14 +298,17 @@
     }
 
     &_next {
-      justify-self: right;
+      justify-self: end;
+      align-self: center;
       grid-row: 5;
       grid-column: 1;
       font-size: 10rem;
       color: #333;
+      width: 150%;
+      height: 150%;
 
       line-height: 0;
-      //box-shadow: .5px .5px 3px 0px black;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 
       &_a {
         padding: 2rem;
@@ -311,7 +320,7 @@
         height: 100%;
         cursor: pointer;
 
-        transition: background 0.1s ease-in-out;
+        transition: all 0.1s ease-in-out;
 
         &::selection {
           background: none;
@@ -319,7 +328,8 @@
 
         &:hover,
         &:active {
-          background: none;
+          background: #333;
+          color: white;
         }
       }
 
@@ -362,7 +372,7 @@
   background-size: cover;
 
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(50rem, 80rem));
+  grid-template-columns: repeat(auto-fit, minmax(50rem, 70rem));
   justify-content: center;
   align-content: center;
 
@@ -377,11 +387,12 @@
     cursor: pointer;
     width: 15rem;
     height: 15rem;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 
     display: flex;
     align-items: center;
 
-    @media only screen and (max-width: $bp-small) {
+    @media only screen and (max-width: $bp-large) {
       grid-column: 1;
       grid-row: 2;
       justify-self: center;
@@ -397,11 +408,15 @@
       width: 100%;
       height: 100%;
       object-fit: contain;
+
+      @media only screen and (max-width: $bp-small) {
+      }
     }
 
-    @media only screen and (max-width: $bp-small) {
+    @media only screen and (max-width: $bp-large) {
       grid-column: 1;
       grid-row: 2;
+      padding: 3rem;
     }
   }
 
@@ -414,7 +429,7 @@
     justify-self: center;
     grid-row-gap: 2rem;
 
-    @media only screen and (max-width: $bp-small) {
+    @media only screen and (max-width: $bp-large) {
       grid-column: 1;
       grid-row: 1;
       margin: 3rem;
@@ -427,16 +442,16 @@
   }
 }
 
-//  MULTIMEDIA-G - FISKEBRYGGA + KART
+//  MULTIMEDIA-G - FISKEBRYGGA + KART/ANIMASJON
 .multimedia-g {
   background: linear-gradient(#06090ab3, #06090ab3),
-  no-repeat center url(../img/mod/fiskebrygga.jpg);
+    no-repeat center url(../img/mod/fiskebrygga.jpg);
   background-size: cover;
   background-attachment: fixed;
 
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(60rem, 1fr));
-  grid-gap: 3rem;
+  grid-template-columns: repeat(auto-fit, minmax(40rem, 70rem));
+  grid-gap: 5rem;
   justify-content: center;
   align-content: center;
 
@@ -448,27 +463,31 @@
     align-self: start;
     justify-self: center;
     grid-row-gap: 2rem;
-    max-width: 40rem;
     margin-top: 5rem;
+
+    &_h1 {
+      text-align: left;
+    }
   }
 
   &_media {
-    display: grid;
+    align-self: center;
+
+    /*display: grid;
     grid-template-rows: repeat(8, 10rem);
     grid-template-columns: repeat(6, 1fr);
-    grid-auto-rows: auto;
+    grid-auto-rows: auto;*/
 
     &_map {
-      background: orangered;
-      grid-row: 2 / span 6;
-      grid-column: 1 / span 4;
-      z-index: 2;
+      //grid-row: 2 / span 6;
+      //grid-column: 1 / span 4;
+      //z-index: 2;
 
       @media only screen and (max-width: $bp-small) {
       }
     }
 
-    &_img--1 {
+    /*&_img--1 {
       grid-row: 7;
       grid-column: 5;
       justify-self: center;
@@ -491,111 +510,59 @@
 
       @media only screen and (max-width: $bp-small) {
       }
-    }
-    
+    }*/
   }
 
   @media only screen and (max-width: $bp-small) {
     grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
     grid-gap: 1rem;
   }
-  /*
-  background: linear-gradient(#06090ab3, #06090ab3),
-  no-repeat center url(../img/mod/fiskebrygga.jpg);
-  background-size: cover;
-  //background: lightgray;
-  display: grid;
-  //grid-template-columns: repeat(auto-fit, minmax(50rem, 80rem));
-  grid-template-columns: minmax(50rem, 1fr) minmax(50rem, 3fr);
-  grid-template-rows: 1fr;
-  grid-auto-rows: 3fr;
-  grid-gap: 2rem;
-  padding: 5rem;
+}
 
-  &_text {
-    color: white;
-    grid-column: 1;
-    grid-row: 2 / span 2;
-    display: grid;
-    align-self: start;
-    justify-self: end;
-    grid-row-gap: 2rem;
-    max-width: 40rem;
-
-    @media only screen and (max-width: $bp-small) {
-      grid-column: 1;
-      grid-row: 1;
-      justify-self: center;
-    }
-  }
+// MULTIMEDIA-H
+.multimedia-h {
+  background: #f8f9fa;
+  padding: 15rem 0rem;
 
   &_media {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 50rem));
+    max-height: 50vh;
 
-    &_map {
-      grid-column: 2;
-      grid-row: 1 / span 3;
-      max-height: 70vh;
-      max-width: 60rem;
-      justify-self: center;
-      align-self: center;
-      min-width: 50rem;
-      margin-right: 10rem;
+    justify-content: center;
+    align-content: center;
 
-      @media only screen and (max-width: $bp-small) {
-        grid-column: 1;
-        grid-row: 3;
-        margin-right: 0;
-        min-height: 50vh;
+    &_block {
+      height: 30vh;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+
+      &--1 {
       }
-    }
-
-    &_img--1 {
-      grid-column: 2;
-      grid-row: 3;
-      max-width: 40rem;
-      justify-self: start;
-      align-self: center;
-      margin-left: -10rem;
-
-      @media only screen and (max-width: $bp-small) {
-        grid-column: 1;
-        grid-row: 2;
-        justify-self: center;
-        align-self: center;
-        margin-left: 0;
+      &--2 {
       }
-    }
+      &--3 {
+      }
 
-    &_img--2 {
-      grid-column: 2;
-      grid-row: 2;
-      max-width: 40rem;
-      align-self: start;
-      justify-self: end;
-      margin-right: 10rem;
-      margin-top: -8rem;
+      & > p {
+        background: white;
+        margin-top: 5rem;
+        z-index: 2;
+        max-width: 25rem;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 
-      @media only screen and (max-width: $bp-small) {
-        grid-column: 1;
-        grid-row: 4;
-        justify-self: center;
-        margin-right: 0;
-        margin-top: 0;
+        display: grid;
+        align-content: center;
+        justify-content: center;
+      }
+
+      & > img {
+        margin-top: -25rem;
+        object-fit: cover;
+        width: 150%;
       }
     }
   }
-
-  @media only screen and (max-width: $bp-small) {
-    padding: 10rem 2rem;
-    grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
-    grid-gap: 1rem;
-    grid-template-rows: 1fr;
-    grid-auto-rows: auto;
-    justify-content: center;
-    align-content: center;
-  }*/
-
-  
 }
 
 // TEXT A
@@ -654,11 +621,11 @@
 
 // MULTIMEDIA SCROLL, sticky images with scrolling text
 .multimedia-scroll {
-  background: var(--light);
+  background: #f8f9fa;
   height: 100%;
 
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30rem, 50rem));
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 60rem));
   grid-gap: 15rem;
   justify-content: center;
 
@@ -704,20 +671,26 @@
     &_quoteblock {
       position: relative;
 
-      & p {
+      & > div {
         position: relative;
         min-height: 100vh;
 
         @media only screen and (max-width: $bp-small) {
         }
 
-        & span {
-          background: var(--light);
+        & > p {
+          background: white;
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+          padding: 2rem;
         }
       }
 
       &--1 {
         min-height: 50vh;
+      }
+
+      &--3 {
+        height: 80vh;
       }
     }
 
@@ -726,9 +699,90 @@
     }
   }
 
+  .gfx {
+    align-self: center;
+    width: 80%;
+
+    display: grid;
+    grid-template-rows: repeat(4, 10vh);
+    grid-template-columns: repeat(6, 10vh);
+    grid-auto-rows: auto;
+
+    &_round {
+      border-radius: 50%;
+      color: white;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+
+      display: grid;
+      align-content: center;
+      justify-content: center;
+      text-align: center;
+
+      &--1 {
+        grid-column: 3;
+        grid-row: 1;
+        justify-self: center;
+        align-self: start;
+        background: #354066;
+
+        width: 18rem;
+        height: 18rem;
+      }
+
+      &--2 {
+        grid-column: 5;
+        grid-row: 4;
+        
+        background: #803434;
+
+        justify-self: center;
+        align-self: end;
+
+        width: 25rem;
+        height: 25rem;
+      }
+
+      &--3 {
+        grid-column: 2;
+        grid-row: 4;
+
+        background: #6a6f74;
+
+        justify-self: center;
+        align-self: end;
+
+        width: 22rem;
+        height: 22rem;
+      }
+    }
+  }
+
   @media only screen and (max-width: $bp-small) {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     grid-gap: 0;
+  }
+}
+
+.crowdsourced-map {
+  background: no-repeat url(../img/placeholder/halden-map.PNG);
+  background-size: cover;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+
+  &_form {
+    background: #f8f9fa;
+    border: 1px solid gray;
+    max-width: 40rem;
+    padding: 5rem;
+
+    > form {
+      display: grid;
+      grid-row-gap: 3rem;
+    }
+  }
+
+  &_instructions {
   }
 }
