--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -45,7 +45,7 @@
 
   &--l {
     @extend %headline;
-    font-size: 10rem;
+    font-size: 9rem;
     letter-spacing: .2rem;
 
     @media only screen and (max-width: $bp-small) {
@@ -69,6 +69,17 @@
 }
 
 .text {
+
+  &--xs {
+    @extend %text;
+    line-height: 1.5;
+    font-size: 1.7rem;
+
+    @media only screen and (max-width: $bp-largest) {
+      font-size: 2.3rem;
+    }
+  }
+
   &--s {
     @extend %text;
     line-height: 1.5;
@@ -125,9 +136,6 @@
     font-size: 4.5rem;
     line-height: 120%;
   }
-}
-
-.bold {
 }
 
 .text-quote {
