--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,16 +1,3 @@
-/*
-TODO--
-responsiv
-chart
-map
-
-hidden class
-parallax
-animasjon
-
-responsive bilder med picture tag*/
-
-
 // RESPONSIVE BREAKPOINTS
 $bp-largest: 75em; // 1200px
 $bp-large: 62.5em; // 1000px
@@ -43,28 +30,12 @@ html {
 
 body {
   box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
+}
 
-  
-
-  
-  //font-family: 'Open Sans', sans-serif;
-
-  .container {
-    //grid-template-rows: 1fr;
-    //grid-template-rows: repeat(auto-fit, minmax(50rem, 1fr));
-    //grid-template-columns: [full-start] repeat(4, minmax(5rem, 1fr)) [full-end];
-    //grid-template-rows: 100vh min-content 40vw repeat(3, min-content);
-    ///grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(2, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
-
-    @media only screen and (max-width: $bp-largest) {
-    }
-
-    @media only screen and (max-width: $bp-large) {
-    }
-
-    @media only screen and (max-width: $bp-medium) {
-    }
-  }
+select, input {
+  width: 100%;
+  font-size: 2rem;
 }
 
 .page-loader {
