--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,3 +1,18 @@
+// Halden Times Logo + Link
+.halden-times-logo {
+  position: absolute;
+  z-index: 1000;
+  top: 1.5rem;
+  right: 1.5rem;
+  &_link {
+    & > img {
+      height: 100%;
+      width: 100%;
+      object-fit: contain;
+    }
+  }
+}
+
 // HEADER LANDING PAGE
 .header_landing {
   background: black;
@@ -108,7 +123,7 @@
     text-align: center;
     z-index: -3;
 
-    text-shadow: 0 5px 20px #1e282de3;
+    text-shadow: 0 5px 20px #16181f;
 
     &::before {
       content: "";
@@ -146,8 +161,6 @@
   position: absolute;
   left: 50%;
   transform: translate(-50%);
-
-  //text-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
 
   animation: bounce 2.5s infinite;
 }
