--- a/sass/_multimedia-modules.scss
+++ b/sass/_multimedia-modules.scss
@@ -43,14 +43,12 @@
       grid-row: 1 / 5;
       grid-column: 1 / 4;
       width: 150%;
-      //box-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
     }
 
     &_img--2 {
       grid-row: 6;
       grid-column: 4 / 7;
       z-index: 20;
-      //box-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
 
       @media only screen and (max-width: $bp-small) {
         grid-row: 4;
@@ -131,7 +129,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
   grid-gap: 3rem;
-  margin-top: -5vh;
+  //margin-top: -5vh;
 
   &_media {
     padding: 2rem;
@@ -150,7 +148,7 @@
 
   &_text {
     padding: 15rem 0rem;
-    max-width: 50rem;
+    max-width: 60rem;
 
     display: grid;
     align-self: center;
@@ -159,7 +157,7 @@
 
     @media only screen and (max-width: $bp-medium) {
       grid-row: 1;
-      padding: 5rem 3rem;
+      padding: 5rem 2rem;
     }
   }
 
@@ -273,7 +271,7 @@
     justify-self: center;
     grid-row-gap: 2rem;
 
-    @media only screen and (max-width: $bp-small) {
+    @media only screen and (max-width: $bp-medium) {
       padding: 5rem 3rem;
     }
   }
@@ -302,33 +300,22 @@
       grid-row: 5;
       grid-column: 1;
       font-size: 10rem;
-      color: #333;
       width: 150%;
       height: 150%;
 
-      line-height: 0;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-
       &_a {
-        padding: 2rem;
-        background: white;
+        background: #253349;
         display: flex;
         align-items: center;
         justify-content: center;
         width: 100%;
         height: 100%;
-        cursor: pointer;
+        padding: 0;
 
         transition: all 0.1s ease-in-out;
 
         &::selection {
           background: none;
-        }
-
-        &:hover,
-        &:active {
-          background: #333;
-          color: white;
         }
       }
 
@@ -378,15 +365,13 @@
   &_button {
     grid-column: 1;
     grid-row: 1;
-    background: white;
+    background: #253349;
     padding: 2rem;
     align-self: center;
     justify-self: center;
     z-index: 20;
-    cursor: pointer;
     width: 15rem;
     height: 15rem;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 
     display: flex;
     align-items: center;
@@ -443,7 +428,7 @@
 
 //  MULTIMEDIA-G - FISKEBRYGGA + KART/ANIMASJON
 .multimedia-g {
-  background: linear-gradient(#06090ab3, #06090ab3),
+  background: linear-gradient(#06090a63, #06090ab3),
     no-repeat center url(../img/mod/fiskebrygga.jpg);
   background-size: cover;
   background-attachment: fixed;
@@ -462,7 +447,6 @@
     align-self: start;
     justify-self: center;
     grid-row-gap: 2rem;
-    margin-top: 5rem;
 
     &_h1 {
       text-align: left;
@@ -472,44 +456,10 @@
   &_media {
     align-self: center;
 
-    /*display: grid;
-    grid-template-rows: repeat(8, 10rem);
-    grid-template-columns: repeat(6, 1fr);
-    grid-auto-rows: auto;*/
-
     &_map {
-      //grid-row: 2 / span 6;
-      //grid-column: 1 / span 4;
-      //z-index: 2;
-
       @media only screen and (max-width: $bp-small) {
       }
     }
-
-    /*&_img--1 {
-      grid-row: 7;
-      grid-column: 5;
-      justify-self: center;
-      align-self: center;
-      width: 200%;
-      z-index: 3;
-      display: none;
-
-      @media only screen and (max-width: $bp-small) {
-      }
-    }
-
-    &_img--2 {
-      grid-row: 3;
-      grid-column: 4;
-      width: 250%;
-      justify-self: start;
-      align-self: end;
-      display: none;
-
-      @media only screen and (max-width: $bp-small) {
-      }
-    }*/
   }
 
   @media only screen and (max-width: $bp-small) {
@@ -518,53 +468,68 @@
   }
 }
 
-// MULTIMEDIA-H
+// MULTIMEDIA-H - Fiskebrygga forandringer, intervju
 .multimedia-h {
-  background: #f8f9fa;
-  padding: 15rem 0rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
+  grid-gap: 3rem;
+  justify-content: center;
+  max-height: 100vh;
+  
+  &_text {
+    max-width: 50rem;
+    display: grid;
+
+    align-self: center;
+    justify-self: center;
+    grid-row-gap: 2rem;
+
+    @media only screen and (max-width: $bp-medium) {
+      padding: 5rem 3rem;
+    }
+  }
 
   &_media {
+    padding: 2rem;
+    
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 50rem));
-    max-height: 50vh;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 2rem;
 
-    justify-content: center;
-    align-content: center;
-
-    &_block {
-      height: 30vh;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
+    &_image {
 
       &--1 {
+        grid-column: 1 / -1;
+        grid-row: 1;
       }
+
       &--2 {
+        grid-column: 1 / -1;
+        grid-row: 2;
       }
+
       &--3 {
+        grid-column: 1 / -1;
+        grid-row: 1;
       }
-
-      & > p {
-        background: white;
-        margin-top: 5rem;
-        z-index: 2;
-        max-width: 25rem;
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-
-        display: grid;
-        align-content: center;
-        justify-content: center;
-      }
-
-      & > img {
-        margin-top: -25rem;
-        object-fit: cover;
-        width: 150%;
-      }
+      
     }
+
+    & img {
+      object-fit: cover;
+      max-height: 100%;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+    }
+  }
+
+  @media only screen and (max-width: $bp-small) {
   }
 }
 
-// MULTIMEDIA J - Alt Petter Nilsen
+// MULTIMEDIA J - Alf Petter Nilsen
 .multimedia-j {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
@@ -572,7 +537,7 @@
   justify-content: center;
 
   &_text {
-    max-width: 60rem;
+    max-width: 50rem;
     display: grid;
     grid-row-gap: 2rem;
     align-self: center;
@@ -588,6 +553,10 @@
       object-position: 0 0;
       transform: rotateY(180deg);
     }
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    padding: 5rem 4rem;
   }
 }
 
@@ -607,6 +576,7 @@
   }
 }
 
+// TEXT B
 .text-b {
   background: #222;
 
@@ -627,7 +597,7 @@
 // VIDEO A
 .video-a {
   position: relative;
-  height: 115vh;
+  //height: 115vh;
 
   &_container {
     max-height: 100vh;
@@ -645,193 +615,5 @@
       object-fit: cover;
       object-position: 70%;
     }
-  }
-}
-
-// MULTIMEDIA SCROLL, sticky images with scrolling text
-.multimedia-scroll {
-  background: #f8f9fa;
-  height: 100%;
-
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30rem, 60rem));
-  grid-gap: 15rem;
-  justify-content: center;
-
-  position: relative;
-
-  &_media {
-    grid-column: 2;
-
-    &_img--1,
-    &_img--2,
-    &_img--3 {
-      position: absolute;
-      height: 100vh;
-      width: 50%;
-      max-width: 80rem;
-      left: 50%;
-      top: 0;
-
-      display: flex;
-
-      img {
-        align-self: center;
-        width: 80%;
-
-        @media only screen and (max-width: $bp-small) {
-          width: 100%;
-          padding: 5rem;
-        }
-      }
-
-      @media only screen and (max-width: $bp-small) {
-        width: 100%;
-        left: 0;
-      }
-    }
-  }
-
-  &_text {
-    grid-column: 1;
-    min-height: 50vh;
-    z-index: 9999;
-
-    &_quoteblock {
-      position: relative;
-
-      & > div {
-        position: relative;
-        min-height: 100vh;
-
-        @media only screen and (max-width: $bp-small) {
-        }
-
-        & > p {
-          background: white;
-          box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-          padding: 2rem;
-        }
-      }
-
-      &--1 {
-        min-height: 50vh;
-      }
-
-      &--3 {
-        height: 80vh;
-      }
-    }
-
-    @media only screen and (max-width: $bp-small) {
-      padding: 5rem;
-    }
-  }
-
-  .gfx {
-    align-self: center;
-    width: 80%;
-
-    display: grid;
-    grid-template-rows: repeat(4, 10vh);
-    grid-template-columns: repeat(6, 10vh);
-    grid-auto-rows: auto;
-
-    &_round {
-      border-radius: 50%;
-      color: white;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-
-      display: grid;
-      align-content: center;
-      justify-content: center;
-      text-align: center;
-
-      &--1 {
-        grid-column: 3;
-        grid-row: 1;
-        justify-self: center;
-        align-self: start;
-        background: #354066;
-
-        width: 18rem;
-        height: 18rem;
-      }
-
-      &--2 {
-        grid-column: 5;
-        grid-row: 4;
-
-        background: #803434;
-
-        justify-self: center;
-        align-self: end;
-
-        width: 25rem;
-        height: 25rem;
-      }
-
-      &--3 {
-        grid-column: 2;
-        grid-row: 4;
-
-        background: #6a6f74;
-
-        justify-self: center;
-        align-self: end;
-
-        width: 22rem;
-        height: 22rem;
-      }
-    }
-  }
-
-  @media only screen and (max-width: $bp-small) {
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    grid-gap: 0;
-  }
-}
-
-.crowdsourced-map {
-  height: 100vh;
-  display: grid;
-  grid-template-columns: repeat(9, 1fr);
-  grid-template-rows: repeat(9, 1fr);
-  
-
-  &_googleMap {
-    grid-column: 1 / -1;
-    grid-row: 1 / -1;
-  }
-
-  &_options {
-    grid-column: 2;
-    grid-row: 2;
-    z-index: 2;
-
-    &_text {
-    background: white;
-    padding: 2rem;
-    display: grid;
-    grid-gap: 1rem;
-    }
-  }
-
-  &_form {
-    padding: 2rem;
-    grid-column: 5;
-    grid-row: 5;
-    background: white;
-    display: grid;
-    z-index: 10;
-    display: none;
-    visibility: hidden;
-  }
-
-  & .carInfo {
-    font-size: 1.5rem;
-    font-weight: 400;
-    text-transform: uppercase;
   }
 }
