--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -47,9 +47,10 @@ video {
   height: auto;
 }
 
-video::-webkit-media-controls-overlay-play-button {
+/* video::-webkit-media-controls-overlay-play-button {
   display: none;
-}
+} */
+
 
 .page-loader {
   display: block;
