--- a/sass/_multimedia-modules.scss
+++ b/sass/_multimedia-modules.scss
@@ -91,7 +91,7 @@
   width: 100%;
 
   background: linear-gradient(55deg, #182949de 0%, #804646a4 85%),
-    no-repeat center url(../img/mod/familien.jpg);
+    no-repeat center url(../img/familien.jpg);
   background-size: cover;
   background-attachment: fixed;
 
@@ -186,7 +186,7 @@
   justify-content: center;
 
   background: linear-gradient(55deg, #804646a4 0%, #182949de 85%),
-    no-repeat center url(../img/mod/juke-vid.jpg);
+    no-repeat center url(../img/juke-vid.jpg);
   background-size: cover;
   background-attachment: fixed;
 
@@ -308,7 +308,7 @@
       cursor: pointer;
       user-select: none;
 
-      &>a {
+      & > a {
         transition: background-color 0.2s ease;
 
         &:hover {
@@ -322,7 +322,8 @@
       grid-column: 1;
       justify-self: start;
 
-      @media only screen and (max-width: $bp-small) {}
+      @media only screen and (max-width: $bp-small) {
+      }
     }
 
     &_next {
@@ -330,7 +331,8 @@
       grid-column: 5;
       justify-self: end;
 
-      @media only screen and (max-width: $bp-small) {}
+      @media only screen and (max-width: $bp-small) {
+      }
     }
 
     &_dots {
@@ -390,9 +392,10 @@
   background-size: cover;
 
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(50rem, 70rem));
   justify-items: center;
   align-items: center;
+  justify-content: space-around;
 
   &_button {
     grid-column: 1;
@@ -425,8 +428,8 @@
       width: 100%;
       height: 100%;
       object-fit: contain;
-
-      @media only screen and (max-width: $bp-small) {}
+      @media only screen and (max-width: $bp-small) {
+      }
     }
 
     @media only screen and (max-width: $bp-large) {
@@ -444,6 +447,7 @@
     align-self: start;
     justify-self: center;
     grid-row-gap: 2rem;
+    max-width: 55rem;
 
     @media only screen and (max-width: $bp-large) {
       grid-column: 1;
@@ -461,7 +465,7 @@
 //  MULTIMEDIA-G - FISKEBRYGGA + KART/ANIMASJON
 .multimedia-g {
   background: linear-gradient(#06090a63, #06090ab3),
-    no-repeat center url(../img/mod/fiskebrygga.jpg);
+    no-repeat center url(../img/fiskebrygga.jpg);
   background-size: cover;
   background-attachment: fixed;
 
@@ -489,7 +493,8 @@
     align-self: center;
 
     &_map {
-      @media only screen and (max-width: $bp-small) {}
+      @media only screen and (max-width: $bp-small) {
+      }
     }
   }
 
@@ -550,10 +555,12 @@
       max-height: 100%;
     }
 
-    @media only screen and (max-width: $bp-small) {}
+    @media only screen and (max-width: $bp-small) {
+    }
   }
 
-  @media only screen and (max-width: $bp-small) {}
+  @media only screen and (max-width: $bp-small) {
+  }
 }
 
 // MULTIMEDIA J - Alf Petter Nilsen
